--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 .App-logo {
-  height: 27vmin;
+  width: calc(125px + 52vw);
   pointer-events: none;
 }
 
 .App-header {
   background-color: #000000;
-  padding: 50px;
+  padding: 50px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,11 +23,19 @@
 }
 
 .HeaderSubTitle {
-    font-size: calc(10px + 5vmin);
+    font-size: calc(15px + 2.3vw);
     font-weight: 700;
     color: white;
 }
 
 .span-dot {
     color: #ffeb3b;
+}
+
+.Paper {
+    background-color: black;
+    margin: 15px 5px;
+    padding-top: 10px;
+    height: calc(100% - 30px);
+    transform: scale(calc(100vh/2));
 }
