--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,10 @@
     height: calc(100% - 30px);
     transform: scale(calc(100vh/2));
 }
+
+footer {
+  background-color: black;
+  width: 100%;
+  bottom: 0;
+  position: fixed;
+}
